--- a/webapp/cafe/views/menu.jade
+++ b/webapp/cafe/views/menu.jade
@@ -19,48 +19,10 @@ block body
 append scripts
     script( src='node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js' )
     script.
-        var url = "api";
 
-        // Load object
-        function loadObject(edge, id, callback) {
-            $.get(url+"/"+edge+"/"+encodeURIComponent(id))
-                .done(function(data) {
-                    console.log("Got " + edge + " from the server:", data);
-                    callback(data);
-                })
-                .fail(function(err) {
-                    msg = "Getting " + edge + " from the server failed.";
-                    console.error(msg);
-                    console.log(err);
-                    window.alert(msg);
-                });
-        }
+        // Build the form
+        function render(kitchens, poses, foods, menu_types) {
 
-        $( document ).ready( function() {
-
-
-            // Load references  
-            var kitchens = [];
-            loadObject("kitchens", "", function(data) {
-                kitchens = data;
-            });
-            var poses = [];
-            loadObject("poses", "", function(data) {
-                poses = data;
-            });
-            var foods = [];
-            loadObject("foods", "", function(data) {
-                foods = data;
-            });
-            var menu_types = [];
-            loadObject("menu_types", "", function(data) {
-                menu_types = data;
-            });
-
-            $.when($.ajax("/api/kitchens"), $.ajax("/api/poses"), $.ajax("/api/foods"), $.ajax("/api/kitchens"))
-                .then(
-
-            // Build the form
             var form_top = $('<div>').addClass('form-horizontal').attr('role', 'form').append(
                 $('<div>').addClass('form-group').append(
                     $('<label>').addClass('control-label col-sm-2').text("Data"),
@@ -73,8 +35,8 @@ append scripts
                     $('<label>').addClass('control-label col-sm-2').text("Typ"),
                     $('<div>').addClass('col-sm-9').append(
                         $('<select>').addClass('form-control').attr('id', 'menu_type').append(
-                            $.each(menu_types, function(id, name, description) {
-                                return $('<option>').value(id).text(name)
+                            $.map(menu_types, function(t) {
+                                return $('<option>').val(t.id).text(t.name);
                             })
                         )
                     ),
@@ -91,10 +53,18 @@ append scripts
 
             $('#menu').append(form_top);
             $('.datepicker').datepicker();
+        }
+
+        $.when($.ajax("/api/kitchens"), $.ajax("/api/poses"), $.ajax("/api/foods"), $.ajax("/api/menu_types"))
+            .done(function(kitchens, poses, foods, menu_types) {
+                render(kitchens[0], poses[0], foods[0], menu_types[0]);
+            })
+            .fail(function(err) {
+                console.error("Getting data from server failed", err);
+                window.alert("Wystąpił błąd.");
+            });
 
 
-
-        });
 
 
         
