--- a/webapp/cafe/views/menu.jade
+++ b/webapp/cafe/views/menu.jade
@@ -4,7 +4,7 @@ append styles
     // Bootstrap theme
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css")
     // Custom styles for this template
-    link(href='node_modules/jade-bootstrap/css/theme.css', rel='stylesheet')
+    link(href='/node_modules/jade-bootstrap/css/theme.css', rel='stylesheet')
 
 block body
     +navbar-fixed("Arkadia Cafe","navbar","inverse")
@@ -17,11 +17,14 @@ block body
         #menu
 
 append scripts
-    script( src='node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js' )
+    script( src='/node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js' )
     script.
+        // Add vs Edit
+        var menuId=#{menuId};
 
         // Build the form
-        function render(kitchens, poses, foods, menu_types) {
+        function render(menu, kitchens, poses, foods, menu_types) {
+            console.log(menu, kitchens, poses, foods, menu_types);
             var form_top = $('<div>').addClass('form-horizontal').attr('role', 'form').append(
                 $('<div>').addClass('form-group').append(
                     $('<label>').addClass('control-label col-sm-2').text("Data"),
@@ -35,7 +38,7 @@ append scripts
                     $('<div>').addClass('col-sm-9').append(
                         $('<select>').addClass('form-control').attr('id', 'menu_type').append(
                             $.map(menu_types, function(t) {
-                                return $('<option>').val(t.id).text(t.name);
+                                return $('<option>').val(t.id).text(t.name).prop('selected', menu.menu_type_id == t.id);
                             })
                         )
                     ),
@@ -52,21 +55,79 @@ append scripts
             var form_menu_items =  $('<table>').addClass('table').append(
                 $('<thead>').append(
                     $('<tr>').append(
-                        $('<th>').text("A"),
-                        $('<th>').text("B"),
-                        $('<th>').text("C")
+                        $('<th>').text("Kuchnia"),
+                        $('<th>').text("Dla"),
+                        $('<th>').text("Potrawa"),
+                        $('<th>').text("Zamówienie"),
+                        $('<th>').text("Zam. Extra"),
+                        $('<th>').text("Zwrot")
+                    )
+                ),
+                $('<tbody>').append(
+                    $.map(menu.menu_items, function(i) {
+                        return $('<tr>').append(
+                            $('<td>').append(
+                                $('<select>').addClass('form-control').attr('id', 'menu_type').append(
+                                    $.map(kitchens, function(k) {
+                                        return $('<option>').val(k.id).text(k.name).prop('selected', i.kitchen_id == k.id);
+                                    })
+                                )
+                            ),
+                            $('<td>').append(
+                                $('<select>').addClass('form-control').attr('id', 'menu_type').append(
+                                    $.map(poses, function(p) {
+                                        return $('<option>').val(p.id).text(p.name).prop('selected', i.pos_id == p.id);
+                                    })
+                                )
+                            ),
+                            $('<td>').append(
+                                $('<select>').addClass('form-control').attr('id', 'menu_type').append(
+                                    $.map(foods, function(f) {
+                                        return $('<option>').val(f.id).text(f.name).prop('selected', i.food_id == f.id);
+                                    })
+                                )
+                            ),
+                            $('<td>').append(
+                                $('<input>').addClass('form-control').attr('id', 'qty').val(i.qty)
+                            ),
+                            $('<td>').append(
+                                $('<input>').addClass('form-control').attr('id', 'qty_extra').val(i.qty_extra)
+                            ),
+                            $('<td>').append(
+                                $('<input>').addClass('form-control').attr('id', 'qty_returned').val(i.qty_returned)
+                            )
+                        );
+                    }),
+                    $('<tr>').append(
+                        $('<tr>').attr('colspan', 5).append(
+                            $('<input>').attr('type', 'button').addClass('button').addClass('btn-default').val('Dodaj Pozycje Menu')
+                        )
                     )
                 )
             );
-
+            
             $('#menu').append(form_top);
             $('#menu').append(form_menu_items);
             $('.datepicker').datepicker();
         }
 
         $.when($.ajax("/api/kitchens"), $.ajax("/api/poses"), $.ajax("/api/foods"), $.ajax("/api/menu_types"))
-            .done(function(kitchens, poses, foods, menu_types) {
-                render(kitchens[0], poses[0], foods[0], menu_types[0]);
+            .done(function(res_kitchens, res_poses, res_foods, res_menu_types) {
+                if (menuId) {
+                    $.ajax("/api/menus/"+menuId)
+                        .done(function(menu) {
+                            render(menu, res_kitchens[0], res_poses[0], res_foods[0], res_menu_types[0]);
+                        })
+                        .fail(function(err) {
+                            window.alert((err.status == 400)?"Menu " + menuId + " nie istnieje.":"Wystąpił błąd.");
+                            console.error("Getting data from server failed", err);
+                        });
+                }
+                else {
+                    var blank_menu = {menu_items:[]};
+                    render(blank_menu, res_kitchens[0], res_poses[0], res_foods[0], res_menu_types[0]);
+                }
+
             })
             .fail(function(err) {
                 console.error("Getting data from server failed", err);
