--- a/webapp/cafe/views/menus.jade
+++ b/webapp/cafe/views/menus.jade
@@ -5,16 +5,31 @@ append styles
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css")
     // Custom styles for this template
     link(href='/node_modules/jade-bootstrap/css/theme.css', rel='stylesheet')
+    // Datepicker
+    link(href='/node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker3.standalone.min.css', rel='stylesheet')
+
 
 block body
     +navbar-fixed("Arkadia Cafe","navbar","inverse")
-        +nav_item("/","active") Menu
-        +nav_item("/views") Podgląd
+        +nav_item("/menus","active") Menu
         +nav_item("/logout") Wyloguj
     .container.theme-showcase(role='main')
         .page-header
-            h1 Menu
-        #menu
+            h1 Zarządzanie Menu
+        |<div id='datepicker'></div>
 
 append scripts
+    // Datepicker
     script( src='/node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js' )
+    script( src='/node_modules/bootstrap-datepicker/dist/locales/bootstrap-datepicker.pl.min.js' )
+
+    script.
+        // Document is ready and loaded
+        $(document).ready(function() {
+            $('#datepicker').datepicker({
+                language: "pl",
+                format: "mm/dd/yyyy",
+                todayHighlight: true,
+                todayBtn: true,
+            });
+        });
