--- a/webapp/cafe/views/menus.jade
+++ b/webapp/cafe/views/menus.jade
@@ -8,7 +8,6 @@ append styles
     // Datepicker
     link(href='node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker3.standalone.min.css', rel='stylesheet')
 
-
 block body
     +navbar-fixed("Arkadia Cafe","navbar","inverse")
         +nav_item("menus","active") Menu
@@ -16,7 +15,11 @@ block body
     .container.theme-showcase(role='main')
         .page-header
             h1 Zarządzanie Menu
-        |<div id='datepicker'></div>
+        .row
+            .col-md-4
+                #datepicker
+            .col-md-8
+                #menu-detail
 
 append scripts
     // Datepicker
@@ -30,10 +33,27 @@ append scripts
         var DATE_FORMAT = "YYYY-MM-DD";
         var DATE_FORMAT_PICKER = "yyyy-mm-dd";
 
+        function renderMenuDetail(id) {
+            return $('<div>').addClass('row').append(
+                $('<input>').attr('type', 'button').addClass('btn').addClass('btn-default').val('Edytuj Menu').click(function() {
+                    window.location = "menu?id="+id;
+                })
+            );
+        }
+
+        function renderNoMenu() {
+            return $('<div>').addClass('row').append(
+                $('<input>').attr('type', 'button').addClass('btn').addClass('btn-default').val('Dodaj Menu').click(function() {
+                    window.location = "menu";
+                })
+            );
+        }
+
         function onDateSelected(d) {
+            $("#menu-detail").html("");
             $.ajax("api/menus/search?dt="+moment(d).format(DATE_FORMAT))
                 .done(function(msg) {
-                    window.location = "menu"+((msg.length>0)?("?id="+msg[0].id):"");
+                    $("#menu-detail").html((msg.length>0)?(renderMenuDetail(msg[0].id)):renderNoMenu());
                 })
                 .fail(function(err) {
                     console.error("Searching menu failed", err);
